# codewars

./: .gitignore
5kyu/spider-to-fly.v1/src/de/klosebrothers/apprentice/spider_to_fly/: DinglemouseTest.java  WebTest.java
5kyu/spider-to-fly.v2/src/de/klosebrothers/apprentice/: Dinglemouse.java
5kyu/spider-to-fly.v2/src/main/java/de/klosebrothers/apprentice/: Dinglemouse.java  Path.java  Position.java  SpiderWeb.java
5kyu/spider-to-fly.v2/src/test/java/de/klosebrothers/apprentice/: PositionTest.java  SpiderWebTest.java
5kyu/spider-to-fly.v2/src/test/resources/: allPossiblePositions.csv  getPathFromCenterTo.csv
5kyu/the-spider-and-the-fly/src/: radialDistanceGreaterThanThree.csv  samePosition.csv
5kyu/the-spider-and-the-fly/src/de/klosebrothers/apprentice/spider_to_fly/: Dinglemouse.java  Web.java  WebPosition.java  WebPositionTest.java
6kyu/find-the-odd-int/: README.md
6kyu/find-the-odd-int/src/: FindOddTest.java
6kyu/multiple-of-3-or-5/: README.md
6kyu/xmas-tree-v1/: package-lock.json
6kyu/xmas-tree-v1/src/: XmasTree.js  index.ts
6kyu/xmas-tree-v1/test/src/: XmasTree.test.ts
6kyu/xmas-tree-v2/: pom.xml
6kyu/xmas-tree-v2/src/test/java/de/klosebrothers/apprentice/kata/xmas_tree/: XmasTreeTest.java
6kyu/xmas-tree-v3/: pom.xml
6kyu/xmas-tree-v3/src/main/java/de/klosebrothers/apprentice/xmas_tree/: XmasTree.java
6kyu/xmas-tree-v3/src/test/java/de/klosebrothers/apprentice/xmas_tree/: XmasTreeTest.java
6kyu/xmas-tree-v4/src/main/java/de/klosebrothers/apprentice/xmas_tree/: XmasTree.java
6kyu/xmas-tree-v4/src/test/java/de/klosebrothers/apprentice/xmas_tree/: XmasTreeTest.java
7kyu/fizz-buzz/: pom.xml
7kyu/fizz-buzz-js/: fizzbuzz.ts  package-lock.json  package.json
7kyu/fizz-buzz-sc/: pom.xml
7kyu/fizz-buzz-sc/src/test/java/de/klosebrothers/apprentice/fizzbuzz/: FizzBuzzTest.java
7kyu/fizz-buzz-v2/src/main/java/de/klosebrothers/apprentice/fizzbuzz/: FizzBuzz.java
7kyu/fizz-buzz-v2/src/test/java/de/klosebrothers/apprentice/fizzbuzz/: FizzBuzzTest.java
7kyu/fizz-buzz/fizz-buzz-v2/: pom.xml
7kyu/fizz-buzz/src/test/java/de/klosebrothers/apprentice/kata/: FizzBuzzTest.java
7kyu/simple-remove-duplicates/: README.md
7kyu/simple-remove-duplicates/src/: Solution.java  SolutionTest.java
7kyu/tennis/src/main/java/de/klosebrothers/apprentice/kata/tennis/: Tennis.java
7kyu/tennis/src/test/java/de/klosebrothers/apprentice/kata/tennis/: TennisTest.java
8kyu/opp-attract/src/: OppositeAttract.java  OppositeAttractTest.java
C/calculateBmi/: CMakeLists.txt  main.c  main.h  test.c
C/complementary-dna/: a.out  main.c  main.h  test.c
C/convert-bool-to-string/: a.out  main.c  test.c
C/counting-sheep/: a.out  main.c  test.c
C/for-twins-2-math-ops/: a.out  main.c  test.c
C/grasshopper-summation/: a.out  main.c  main.h  test.c
C/perimeter-sequ/: a.out  main.c  test.c
C/remove-string-spaces/: a.out  main.c  main.h  test.c
C/smallest-integer-in-array/: a.out  main.c  main.h  test.c
C/sort-the-bytes/: a.out  main.c  test.c
C/sum-of-numbers/: a.out  main.c  main.h  test.c
Haskell/katas/: .gitignore  CHANGELOG.md  codewars.cabal
Haskell/katas/app/: Codewars.hs  Kyu8.hs  Main.hs
Haskell/katas/app/CIS194/: Week1.hs
Haskell/katas/app/CIS194/Log/: Log.hs  LogAnalysis.hs
Haskell/katas/app/Codewars/: Functions.hs  Kyu5.hs  Kyu6.hs  Kyu7.hs  Kyu8.hs
Haskell/katas/test/: kyu5-spec.hs  kyu6-spec.hs  kyu7-spec.hs  kyu8-spec.hs  log-spec.hs  spec.hs  week1-spec.hs
Java/find-the-odd-int/src/: FindOdd.java
Java/fizz-buzz/fizz-buzz-sc/src/main/java/de/klosebrothers/apprentice/fizzbuzz/: FizzBuzz.java
Java/fizz-buzz/fizz-buzz-v1/src/main/java/de/klosebrothers/apprentice/kata/: FizzBuzz.java
Java/get-the-middle-char/: README.md
Java/get-the-middle-char/src/: Kata.java  KataTest.java
Java/multiple-of-3-or-5/src/: Solution.java  SolutionTest.java
Java/roman-numerals/: pom.xml
Java/roman-numerals/src/main/java/de/klosebrothers/apprentice/: RomanNumerals.java
Java/roman-numerals/src/test/java/de/klosebrothers/apprentice/: RomanNumeralsTest.java
Java/spider-to-fly/spider-to-fly.v1/: README.md
Java/spider-to-fly/spider-to-fly.v1/src/: radialDistanceLessThanThree.csv  spiderAtCenter.csv
Java/spider-to-fly/spider-to-fly.v2/: pom.xml
Java/spider-to-fly/spider-to-fly.v2/src/main/java/de/klosebrothers/apprentice/: Path.java  Position.java
Java/spider-to-fly/spider-to-fly.v2/src/test/java/de/klosebrothers/apprentice/: PathTest.java
Java/spider-to-fly/spider-to-fly.v2/src/test/resources/: pathToString.csv  radialStepsTo.csv
Java/tennis/: pom.xml
Java/xmas-tree/xmas-tree-v1/: package.json
Java/xmas-tree/xmas-tree-v1/src/: XmasTree.ts  index.js
Java/xmas-tree/xmas-tree-v1/test/src/: XmasTree.test.js
Java/xmas-tree/xmas-tree-v4/: pom.xml
Javascript/fizz-buzz-js/: fizzbuzz.js  fizzbuzz.test.js
(+4 files in other folders)
