cabal-version:      2.4
name:               codewars
version:            0.1.0.0
build-type:         Simple

Test-Suite sumpos
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/spec.hs
    other-modules:      Codewars
    build-depends:      base >= 4 && < 5,
                        hspec,
                        QuickCheck

Test-Suite kyu8
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/kyu8-spec.hs
    other-modules:      Kyu8
    build-depends:      base >= 4 && < 5,
                        hspec,
                        QuickCheck

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable codewars
    main-is:          Main.hs
    other-modules:    Codewars,
                      Kyu8

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   app
    default-language: Haskell2010


