cabal-version:      2.4
name:               codewars
version:            0.1.0.0
build-type:         Simple

Test-Suite sumpos
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/spec.hs
    other-modules:      Codewars.Functions
    build-depends:      base >= 4 && < 5,
                        hspec,
                        QuickCheck

Test-Suite kyu8
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/kyu8-spec.hs
    other-modules:      Codewars.Kyu8
    build-depends:      base >= 4 && < 5,
                        hspec,
                        QuickCheck

Test-Suite kyu7
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/kyu7-spec.hs
    other-modules:      Codewars.Kyu7
    build-depends:      base >= 4 && < 5,
                        hspec,
                        split,
                        QuickCheck

Test-Suite kyu6
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/kyu6-spec.hs
    other-modules:      Codewars.Kyu6
    build-depends:      base >= 4 && < 5,
                        hspec,
                        QuickCheck

Test-Suite kyu5
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/kyu5-spec.hs
    other-modules:      Codewars.Kyu5
    build-depends:      base >= 4 && < 5,
                        hspec,
                        QuickCheck

Test-Suite week1
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            ../test/week1-spec.hs
    other-modules:      CIS194.Week1
    build-depends:      base >= 4 && < 5,
                        hspec,
                        QuickCheck

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable codewars
    main-is:          Main.hs
    other-modules:    Codewars.Functions,
                      Codewars.Kyu8
                      Codewars.Kyu7
                      Codewars.Kyu6
                      Codewars.Kyu5
                      CIS194.Week1

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0,
                      split
    hs-source-dirs:   app
    default-language: Haskell2010


